<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/edit_code_tv"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="47dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="9sp"
        android:text="@string/enter_code"
        android:textAppearance="@style/enter_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pin_code"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="47dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="9sp"
        android:maxLength="4"
        android:textAppearance="@style/enter_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_1"
        style="@style/view_element_style"
        android:layout_marginStart="73dp"
        android:layout_marginTop="289dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_1"
        style="@style/text_view_dimens"
        android:layout_marginStart="87dp"
        android:layout_marginTop="302dp"
        android:text="@string/text_1"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_2"
        style="@style/view_element_style"
        android:layout_alignParentTop="true"
        android:layout_marginStart="174dp"
        android:layout_marginTop="289dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_2"
        style="@style/text_view_dimens"
        android:layout_marginStart="188dp"
        android:layout_marginTop="302dp"
        android:text="@string/text_2"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_3"
        style="@style/view_element_style"
        android:layout_marginStart="275dp"
        android:layout_marginTop="289dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_3"
        style="@style/text_view_dimens"
        android:layout_marginStart="289dp"
        android:layout_marginTop="302dp"
        android:text="@string/text_3"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_4"
        style="@style/view_element_style"
        android:layout_marginStart="73dp"
        android:layout_marginTop="361dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_4"
        style="@style/text_view_dimens"
        android:layout_marginStart="87dp"
        android:layout_marginTop="374dp"
        android:text="@string/text_4"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_5"
        style="@style/view_element_style"
        android:layout_marginStart="174dp"
        android:layout_marginTop="361dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_5"
        style="@style/text_view_dimens"
        android:layout_marginStart="188dp"
        android:layout_marginTop="374dp"
        android:text="@string/text_5"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_6"
        style="@style/view_element_style"
        android:layout_marginStart="275dp"
        android:layout_marginTop="361dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_6"
        style="@style/text_view_dimens"
        android:layout_marginStart="289dp"
        android:layout_marginTop="374dp"
        android:text="@string/text_6"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_7"
        style="@style/view_element_style"
        android:layout_marginStart="73dp"
        android:layout_marginTop="433dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_7"
        style="@style/text_view_dimens"
        android:layout_marginStart="87dp"
        android:layout_marginTop="446dp"
        android:text="@string/text_7"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_8"
        style="@style/view_element_style"
        android:layout_marginStart="174dp"
        android:layout_marginTop="433dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_8"
        style="@style/text_view_dimens"
        android:layout_marginStart="188dp"
        android:layout_marginTop="446dp"
        android:text="@string/text_8"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_9"
        style="@style/view_element_style"
        android:layout_marginStart="275dp"
        android:layout_marginTop="433dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_9"
        style="@style/text_view_dimens"
        android:layout_marginStart="289dp"
        android:layout_marginTop="446dp"
        android:text="@string/text_9"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_10"
        style="@style/view_element_style"
        android:layout_marginStart="73dp"
        android:layout_marginTop="505dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_clear"
        style="@style/text_view_dimens"
        android:layout_marginStart="87dp"
        android:layout_marginTop="518dp"
        android:text="@string/clear"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_11"
        style="@style/view_element_style"
        android:layout_marginStart="174dp"
        android:layout_marginTop="505dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_0"
        style="@style/text_view_dimens"
        android:layout_marginStart="188dp"
        android:layout_marginTop="518dp"
        android:text="@string/text_0"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_12"
        style="@style/view_element_style"
        android:layout_marginStart="275dp"
        android:layout_marginTop="505dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_ok"
        style="@style/text_view_dimens"
        android:layout_marginStart="289dp"
        android:layout_marginTop="518dp"
        android:text="@string/OK"
        android:textAppearance="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>